--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "directory": "/Users/ryo/Files/Study/PMUT/EEG",
     "date": "20240712",
-    "file": "20240712"
+    "file": "20240712",
+    "scale": 0.05
 }
