Statistically analyze responses

--- a/config.json
+++ b/config.json
@@ -1,11 +1,16 @@
 {
     "directory": "/Users/ryo/Files/Study/PMUT/EEG",
-    "date": "20240813",
-    "file": "20240813",
-    "scale": 15,
+    "date": "20240817",
+    "file": "20240817",
+    "scale": 10,
     "analysis_ids": [
-        "20240805",
-        "20240806",
-        "20240813"
+        "20240816_a",
+        "20240816_b",
+        "20240817"
+    ],
+    "analysis_chs": [
+        [4, 6],
+        [4, 6],
+        [4, 6]
     ]
 }
