--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "directory": "/Users/ryo/Files/Study/PMUT/EEG",
     "date": "20241118",
-    "file": "20241118_post",
-    "scale": 100,
+    "file": "20241118_pre",
+    "scale": 10,
     "analysis_ids": [
         "20240816_a",
         "20240816_b",
