Plot the averaged waveforms with all trials

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "directory": "/Users/ryo/Files/Study/PMUT/EEG",
     "date": "20241118",
-    "file": "20241118_pre",
+    "file": "20241118",
     "scale": 100,
     "analysis_ids": [
         "20240816_a",
