--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "directory": "/Users/ryo/Files/Study/PMUT/EEG",
     "date": "20241218",
-    "file": "20241218",
-    "scale": 20,
+    "file": "20241218_post_20",
+    "scale": 200,
     "analysis_ids": [
         "20240816_a",
         "20240816_b",
