--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@
 *.png
 
 one_ch_plot.py
-response_test.py
+plasticity_one_ch_trial.py
+plasticity_one_ch.py
 plasticity_test.py
+plasticity.py
+response_test.py
